<resources>
    <string name="app_name">BEIJING OLYMPIC 2022</string>

    <string name="text_label_sign_in">Sign In</string>
    <string name="text_label_sign_up">Sign Up</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="text_label_forgot_password">Forgot Password</string>
    <string name="new_account">Don’t have an account? SIGN UP</string>
    <string name="existing_account">Already  have an account? SIGN IN</string>

    <string name="field_empty">Field cannot be empty</string>
    <string name="password_8_characters_long">Password must be at least 8 characters long</string>
    <string name="reset_password_link">Enter Your E-mail address and a reset password link will be sent to your e-mail</string>
    <string name="text_submit_label">Submit</string>
    <string name="title_home">Home</string>
    <string name="title_logs">My Logs</string>
    <string name="title_profile">My Profile</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>
    <string name="empty_highlights">No Game Highlights Found</string>
    <string name="higlight_thumbnail_desc">highlight thumbnail</string>
    <string name="personal_details_label">Personal Details</string>
    <string name="btn_save_text">Save</string>
    <string name="password_details_label">Password Details</string>
    <string name="new_password_hint">New Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="change_password_text">Change Password</string>
    <string name="delete_account_text">Delete Account</string>
    <string name="yokyo_2022">BEIJING OLYMPIC 2022</string>
    <string name="details">This app was built by NWANNEKA JENNIFER EJINKONYE with ❤️ and 👩🏼‍💻.\n\n<b>CET333 Product Development</b>\n<u>Programme:</u> <b>MOBILE AND WEB TECHNOLOGY</b></string>
    <string name="more_details">The Fun Olympic Committee is at the very heart of world sport, supporting every Olympic Movement stakeholder, promoting Olympism worldwide, and overseeing the regular celebration of the Olympic Games. They the governing body of the Olympic movement in the city of Beijing, which promotes Olympic games across the globe and leads the Olympic movement. The committee is organising Olympic games to be held in Beijing after a worldwide pandemic. The committee has requested me to develop an app which the athletes will use while they attend the game that will record their movement, venues/location, dates, and time.</string>
    <string name="pass_update_error">Error updating password</string>
    <string name="pass_update_success">Password Updated Successfully</string>
    <string name="email_update_success">Email Updated Successfully</string>
    <string name="account_delete_success">Account Deleted Successfully</string>
    <string name="account_delete_error">Sorry, this account cannot be deleted at this moment</string>
    <string name="save_quest">Save Location to your log?</string>
    <string name="save_btn_text">Save</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="remove_btn_text">Remove</string>
    <string name="share_btn_text">Share</string>
    <string name="log_details">You were at Beijing City on 8 May, 2022 at 09:20AM</string>
    <string name="log_screen_info">Here you can find your location logs</string>
    <string name="empty_log_state">You don\'t have anything in your log, click on the plus \'+\' button to create a new log</string>
    <string name="search_hint">Search For Highlights</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>