<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.main.FragmentProfile">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/roboto"
            android:text="@string/personal_details_label"
            android:textSize="@dimen/extra_medium_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailAddressTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/hint_email"
            app:hintEnabled="true"
            app:hintTextColor="@color/primaryTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/normal_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:enabled="false"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/btn_save_text"
            android:textAllCaps="false"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_top_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/password_details_label"
            android:textSize="@dimen/extra_medium_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPasswordTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_almost_big"
            android:hint="@string/old_password_hint"
            app:hintEnabled="true"
            app:hintTextColor="@color/primaryTextColor"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputOldPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/normal_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_almost_big"
            android:hint="@string/new_password_hint"
            app:hintEnabled="true"
            app:hintTextColor="@color/primaryTextColor"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/normal_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:enabled="false"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/change_password_text"
            android:textAllCaps="false"
            android:textColor="@color/secondaryTextColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteAccount"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/delete_account_text"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            app:strokeColor="@color/primaryColor" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>