<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.main.FragmentAbout">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_top_margin"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/yokyo_2022"
        android:textColor="@color/primaryColor"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/details"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/appTitle"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/more_details"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/text1"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/text1" />


</androidx.constraintlayout.widget.ConstraintLayout>