<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/sheet_padding">

    <TextView
        android:id="@+id/saveLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/save_quest"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/xx_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:minHeight="60dp"
        android:text="@string/cancel_btn_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/normal_text_size"
        app:backgroundTint="@color/secondaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveLocationText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/save_btn_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>