<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/sheet_padding">

    <TextView
        android:id="@+id/logDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/log_details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/xx_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:minHeight="60dp"
        android:text="@string/remove_btn_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/normal_text_size"
        app:backgroundTint="@color/secondaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logDetailsText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/share_btn_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/normal_text_size"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/btnRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRemove"
        app:layout_constraintTop_toTopOf="@+id/btnRemove" />
</androidx.constraintlayout.widget.ConstraintLayout>